# Fractol

./: CMakeLists.txt  Makefile  README.md  author  calculations.c  colors.c  draw_fractal.c  fdf  fdf.h  first.c  fractol  fractol.h  init_data.c  keys.c  keys_and_struct.h  main.c  menu.c  mouse.c  utils.c
inc/: fractol.h  keys_and_struct.h
libft/srcs/: ft_strcmp.c
maps/: france.fdf
src/: calculations.c  colors.c  draw_fractal.c  init_data.c  keys.c  main.c  menu.c  utils.c
